[python] Simplify a stream in LanguageLevel.SUPPORTED_LEVELS
GitOrigin-RevId: af5156e67989bb88235c89b751f66ea0cdbc4174